# gtk-theme-ubuntustudio-legacy

./: AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
UbuntuStudio_Legacy/: COPYING  Makefile.am  index.theme
UbuntuStudio_Legacy/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-2.0/: Makefile.am  gtkrc
UbuntuStudio_Legacy/gtk-2.0/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-2.0/panel/: Makefile.am
UbuntuStudio_Legacy/gtk-3.0/: Makefile.am  assets  gtk-main.css  gtk-widgets-assets.css  gtk-widgets.css  panel.css
UbuntuStudio_Legacy/gtk-3.0/apps/: Makefile.am  apps.css
UbuntuStudio_Legacy/gtk-3.0/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-3.18/: Makefile.am  gtk-widgets-assets.css  gtk-widgets.css  panel.css  settings.ini
UbuntuStudio_Legacy/gtk-3.18/apps/: Makefile.am  apps.css  lightdm-gtk-greeter.css
UbuntuStudio_Legacy/gtk-3.18/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-3.20/: Makefile.am  gtk-widgets-assets.css  gtk-widgets.css  panel.css  window-controls.css
UbuntuStudio_Legacy/gtk-3.20/apps/: Makefile.am  apps.css  lightdm-gtk-greeter.css
UbuntuStudio_Legacy/gtk-3.20/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-3.20/window-controls/: Makefile.am
UbuntuStudio_Legacy/gtk-3.22/: Makefile.am  calendar-adjustment.css  gtk-main.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css  panel.css
UbuntuStudio_Legacy/gtk-3.22/apps/: Makefile.am
UbuntuStudio_Legacy/gtk-3.22/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-4.0/: Makefile.am  gtk-main.css  gtk-widgets-assets.css  gtk-widgets.css  panel.css  settings.ini  window-controls.css
UbuntuStudio_Legacy/gtk-4.0/apps/: Makefile.am  apps.css  lightdm-gtk-greeter.css
UbuntuStudio_Legacy/gtk-4.0/assets/: Makefile.am
UbuntuStudio_Legacy/gtk-4.0/window-controls/: Makefile.am
UbuntuStudio_Legacy/metacity-1/: Makefile.am  metacity-theme-1.xml
