THEME_NAME=UbuntuStudio_Legacy
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = index.theme

EXTRA_DIST = $(theme_DATA)

SUBDIRS =    \
	assets   \
	gtk-2.0  \
	gtk-3.0  \
	gtk-3.18 \
	gtk-3.20 \
	gtk-3.22 \
	metacity-1

DIST_SUBDIRS = \
	assets   \
	gtk-2.0  \
	gtk-3.0  \
	gtk-3.18 \
	gtk-3.20 \
	gtk-3.22 \
	metacity-1

CLEANFILES = index.theme
