themedir = $(datadir)/themes/UbuntuStudio_Legacy/gtk-3.20

theme_DATA = \
	gtk.css \
	gtk-dark.css \
	gtk-main.css \
	gtk-main-dark.css \
	gtk-widgets-assets.css \
	gtk-widgets.css \
	panel.css \
	settings.ini

EXTRA_DIST = $(theme_DATA)

SUBDIRS = \
	apps \
	assets

DIST_SUBDIRS = \
	apps \
	assets
