themedir = $(datadir)/themes/UbuntuStudio_Legacy/gtk-3.18/assets

theme_DATA = \
	button-border-dark.svg \
	button-border-insensitive.svg \
	button-border-pressed-insensitive.svg \
	button-border-pressed.svg \
	button-insensitive.svg \
	button-pressed-insensitive.svg \
	button-pressed.svg \
	button-selected.svg \
	button.svg \
	calendar_grid.svg \
	calendar_grid_340.svg \
	calendar-selected-bg.svg \
	checkbg.svg \
	checkbox-animated-checked-glow-bg.svg \
	checkbox-animated-checked.svg \
	checkbox-checked-animated-bg.svg \
	checkbox-checked-glow.svg \
	checkbox-checked-insensitive.svg \
	checkbox-checked.svg \
	checkbox_glow.svg \
	checkbox-insensitive.svg \
	checkbox-insensitive-view.svg \
	checkbox-menuitem-checked.svg \
	checkbox-menuitem.svg \
	checkbox-mixed-glow.svg \
	checkbox-mixed-insensitive.svg \
	checkbox-mixed.svg \
	checkbox.svg \
	column-header-border-dark.svg \
	entry-border-dark.svg \
	frame-border-dark.svg \
	generic-border-dark.svg \
	generic-border.svg \
	generic-border-unfocused.svg \
	grid-selection-checked.svg \
	grid-selection-unchecked.svg \
	holes_horiz.svg \
	holes_tiny_glow_fine_horiz.svg \
	holes_tiny_glow_fine_vert.svg \
	holes_tiny_glow_horiz.svg \
	holes_tiny_glow_vert.png \
	holes_tiny_glow_vert.svg \
	holes_tiny_horiz.png \
	holes_tiny_horiz.svg \
	holes_tiny_vert.png \
	holes_tiny_vert.svg \
	holes_vert.png \
	holes_vert.svg \
	hole_tiny.svg \
	knob_horizontal.svg \
	knob_insensitive.svg \
	knob.svg \
	knob_vertical.svg \
	menu-border-dark.svg \
	menu-border.svg \
	menuitem-border-dark.svg \
	menuitem-hiver-border-dark.svg \
	notebook-border-dark.svg \
	pane-separator-grip-hover.png \
	pane-separator-grip-hover.svg \
	pane-separator-grip.png \
	pane-separator-grip.svg \
	pane-separator-grip-vertical-hover.png \
	pane-separator-grip-vertical-hover.svg \
	pane-separator-grip-vertical.png \
	pane-separator-grip-vertical.svg \
	progress.svg \
	progress-vertical.svg \
	radio-checked-animated-bg.svg \
	radio-checked-animated-button.svg \
	radio-checked-insensitive.svg \
	radio-checked.svg \
	radio-insensitive.svg \
	radio-menuitem-checked-insensitive.svg \
	radio-menuitem-checked.svg \
	radio-mixed-insensitive.svg \
	radio-mixed.svg \
	radio.svg \
	scale-slider-horizontal-insensitive-dark.svg \
	scale-slider-marks-above-horizontal-dark.svg \
	scale-slider-marks-above-horizontal-insensitive-dark.svg \
	scale-slider-marks-above-horizontal-insensitive.svg \
	scale-slider-marks-above-horizontal-insensitive-unfocused.svg \
	scale-slider-marks-above-horizontal.svg \
	scale-slider-marks-above-horizontal-unfocused.svg \
	scale-slider-marks-above-vertical-dark.svg \
	scale-slider-marks-above-vertical-insensitive-dark.svg \
	scale-slider-marks-above-vertical-insensitive.svg \
	scale-slider-marks-above-vertical-insensitive-unfocused.svg \
	scale-slider-marks-above-vertical.svg \
	scale-slider-marks-above-vertical-unfocused.svg \
	scale-slider-marks-below-horizontal-dark.svg \
	scale-slider-marks-below-horizontal-insensitive-dark.svg \
	scale-slider-marks-below-horizontal-insensitive.svg \
	scale-slider-marks-below-horizontal-insensitive-unfocused.svg \
	scale-slider-marks-below-horizontal.svg \
	scale-slider-marks-below-horizontal-unfocused.svg \
	scale-slider-marks-below-vertical-dark.svg \
	scale-slider-marks-below-vertical-insensitive-dark.svg \
	scale-slider-marks-below-vertical-insensitive.svg \
	scale-slider-marks-below-vertical-insensitive-unfocused.svg \
	scale-slider-marks-below-vertical.svg \
	scale-slider-marks-below-vertical-unfocused.svg \
	scale-slider-vertical-insensitive-dark.png \
	scale-slider-vertical-insensitive-dark.svg \
	scale_trough_insensitive.svg \
	scale_trough.svg \
	scale_trough_vertical_insensitive.svg \
	scale_trough_vert.svg \
	scrollbar-slider-border-dark.svg \
	scrollbar-slider-border-vertical.svg \
	sidebar-radio-checked-dark.svg \
	sidebar-radio-checked.svg \
	sidebar-radio-prelight.svg \
	sidebar-radio-selected-dark.svg \
	sidebar-radio-selected-prelight.svg \
	sidebar-radio-selected.svg \
	slider_horiz_active.svg \
	slider_horiz.svg \
	slider_run_base_horiz.png \
	slider_run_base_vert.png \
	slider_vert_active.png \
	slider_vert_active.svg \
	slider_vert.svg \
	switch-border-active.svg \
	switch-slider-grip.svg \
	switch-trough-active.svg \
	tab-active-border-bottom.svg \
	tab-active-border-left.svg \
	tab-active-border-right.svg \
	tab-active-border.svg \
	tab-border.svg \
	tab-bottom-active.svg \
	tab-bottom.svg \
	tab-left-active.svg \
	tab-left.svg \
	tab-right-active.svg \
	tab-right.svg \
	tab-top-active.svg \
	tab-top.svg \
	toolbar-button-hover.svg \
	toolbar.svg \
	trough_horiz.svg \
	trough_vert.svg
	
EXTRA_DIST = $(theme_DATA)
