themedir = $(datadir)/themes/UbuntuStudio_Legacy/gtk-3.20/window-controls

theme_DATA = \
	button-close-hover.png \
	button-close-normal.png \
	button-close-pressed.png \
	button-hover.png \
	button-maximize-hover.png \
	button-maximize-normal.png \
	button-maximize-pressed.png \
	button-minimize-hover.png \
	button-minimize-normal.png \
	button-minimize-pressed.png \
	button-normal.png \
	button-pressed.png \
	decoration.png \
	decoration-csd.png
	
EXTRA_DIST = $(theme_DATA)
